[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/HorsesOrnate3_BG.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/HorsesOrnate3.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/GalleryViewer.gd" type="Script" id=3]
[ext_resource path="res://prefabs/UI/HoverText.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Intro"

[node name="GalleryViewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HorsesOrnate3" type="Sprite" parent="."]
position = Vector2( 480, 304 )
z_index = 1
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="HorsesOrnate3_BG" type="Sprite" parent="HorsesOrnate3"]
z_index = -1
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="HorsesOrnate3/HorsesOrnate3_BG"]
margin_top = -240.0
margin_right = 464.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HorsesOrnate3/HorsesOrnate3_BG/ScrollContainer"]
custom_constants/vseparation = 164
custom_constants/hseparation = 155
columns = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )

[node name="HoverContainer" parent="." instance=ExtResource( 4 )]
